--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -733,6 +733,10 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
     color: #ffffff !important;
   background-color: #7266ba;
   border-color: #7266ba;
+  width: 100%;
+  height: 30px;
+  padding: 6px 12px;
+  font-size: 14px;
 }
 
 .btn-primary:hover,
