--- a/src/main/webapp/assest/css/style.css
+++ b/src/main/webapp/assest/css/style.css
@@ -2896,7 +2896,7 @@ ul.messagesList li span.date {
 }
 
 .menuContent {
-	width: 49%;
+	width: 445px;
 	display: inline-block;
 	margin-top: -25px;
 	border: 1px solid rgb(170, 170, 170);
